--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,29 @@
-Hello world.
+<div class="row" style="padding-right:15px; padding-left:15px">
+<div class="col-md-3">
+
+  <div class="panel panel-default">
+    <div class="panel-body">
+
+      <h4><b>Recent Searches:</b></h4>
+      <ul class="nav nav-pills nav-stacked">
+        <li role="presentation" class="active"><a href="#">Home</a></li>
+        <li role="presentation"><a href="#">Profile</a></li>
+        <li role="presentation"><a href="#">Messages</a></li>
+      </ul>
+    </div>
+  </div>
+ 
+  </div>
+  <div class="col-md-9">
+
+  <div class="panel panel-default">
+    <div class="panel-body">
+
+     
+    </div>
+ 
+  
+
+</div>
+</div>
+</div>
