--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,17 +18,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"> Hello world</a>
+          <a class="navbar-brand" href="#"> Your Home</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">hi</a></li>
-            <li><a href="#">Link</a></li>
-        
+            <li class="active"><a href="#">Recent Searches</a></li>
+            <li><a href="#">Help Me!</a></li>
+             <li><a href="#">Women Emergency Helpline</a></li>
+
         </ul>
+         <ul class="nav navbar-nav navbar-right">
+                     <li><a href="#">Show me nearby Hospitals</a></li>
+					 <li><a href="#">Nearby Train and Bus Stops</a></li>                     
+         </ul>
 
                     </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
