--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,15 +18,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"> @<%= @city %></a>
+          <a class="navbar-brand" href="#"> @<%= @json_response["city"] %>
+</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Recent Searches</a></li>
-            <li><a href="#">Help Me!</a></li>
-             <li><a href="#">Women Emergency Helpline</a></li>
+            <li><%=lnk_to home_help_path , "Help Me!" %></li>
+             <li><%=lnk_to home_women_path , "Women Emergency Helpline" %></li>
 
         </ul>
          <ul class="nav navbar-nav navbar-right">
