--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,9 +4,10 @@
 
   <div class="panel panel-default">
     <div class="panel-body">
-<form  role="search">
+<%= form_for home_new_search_path do |f| %>
    <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+    <%= f.text_field   :search_query , :class => 'form-control' , :placeholder => 'Search' , :id => 'srch-term' , :name => 'srch-term' %>
+            
             <div class="input-group-btn">
                 <button class="btn btn-default" type="submit">
 
@@ -15,7 +16,8 @@
         </div>
          
 
-</form>
+<% end %>
+
       <h4><b>Recent Searches:</b></h4>
       <ul class="nav nav-pills nav-stacked">
         <li role="presentation"><a href="#">Home</a></li>
@@ -30,6 +32,7 @@
 
   <div class="panel panel-default">
     <div class="panel-body">
+<%= @json_response %>
 
     </div>
  
