--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,12 +1,24 @@
 <div class="row" style="padding-right:15px; padding-left:15px">
+
 <div class="col-md-3">
 
   <div class="panel panel-default">
     <div class="panel-body">
+<form  role="search">
+   <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+            <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
 
+                  <i class="fa fa-search"></i></button>
+            </div>
+        </div>
+         
+
+</form>
       <h4><b>Recent Searches:</b></h4>
       <ul class="nav nav-pills nav-stacked">
-        <li role="presentation" class="active"><a href="#">Home</a></li>
+        <li role="presentation"><a href="#">Home</a></li>
         <li role="presentation"><a href="#">Profile</a></li>
         <li role="presentation"><a href="#">Messages</a></li>
       </ul>
