--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,26 +4,28 @@
 
   <div class="panel panel-default">
     <div class="panel-body">
-<%= form_for home_new_search_path do |f| %>
-   <div class="input-group">
-    <%= f.text_field   :search_query , :class => 'form-control' , :placeholder => 'Search' , :id => 'srch-term' , :name => 'srch-term' %>
-            
-            <div class="input-group-btn">
-                <button class="btn btn-default" type="submit">
-
-                  <i class="fa fa-search"></i></button>
-            </div>
-        </div>
-         
-
+<%= form_tag root_path, :method => 'get' do %>
+<div class="input-group">
+    <%= text_field_tag :search, params[:search] , :class => 'form-control' %>
+     <span class="input-group-btn">
+    <%= submit_tag "search" , :name => nil , :class => 'btn btn-default' %>
+  </span>
+  </div>
 <% end %>
-
+<% if @searches.count != 0 %>
       <h4><b>Recent Searches:</b></h4>
+      
       <ul class="nav nav-pills nav-stacked">
-        <li role="presentation"><a href="#">Home</a></li>
-        <li role="presentation"><a href="#">Profile</a></li>
-        <li role="presentation"><a href="#">Messages</a></li>
+        <% @searches.each do |s| %>
+
+                <li role="presentation"><a href="#"><%= s.search_query %></a></li>
+
+        <% end %> 
+       
       </ul>
+      <% else %> 
+      <h4><b>No Recent Searches</b></h4>
+      <% end %>
     </div>
   </div>
  
@@ -32,7 +34,6 @@
 
   <div class="panel panel-default">
     <div class="panel-body">
-<%= @json_response %>
 
     </div>
  
