one with sqlite

--- a/app/views/home/women.html.erb
+++ b/app/views/home/women.html.erb
@@ -3,11 +3,11 @@
  <div class="panel panel-default">
     <div class="panel-body">
     	<div class="col-md-6">
-<%= link_to "Extreme Emergency FREE Police Call" , home_emergency_path , :method => 'post' , :class => 'btn btn-lg btn-block btn-danger' %>
+<%= link_to "Extreme Emergency FREE Police Call" , home_emergency_path , :method => 'post' , :class => 'btn btn-lg btn-block btn-danger' , :remote => true %>
 </div>
 
 <div class="col-md-6 offset-1">
-<%= link_to "FREE Call to the nearest NGO" , home_ngo_path , :method => 'post' , :class => 'btn btn-lg btn-block btn-warning' %>
+<%= link_to "FREE Call to the nearest NGO" , home_ngo_path , :method => 'post' , :class => 'btn btn-lg btn-block btn-warning' , :remote => true %>
 </div>
 </div>
 </div>
