--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@ $(".nav a").on("click", function(){
         </ul>
          <ul class="nav navbar-nav navbar-right">
                      <li class="<%= 'active' if current_page?(home_hospital_path) %>"><%= link_to "Show me nearby Hospitals" , home_hospital_path  %></li>
-					 <li class="<%= 'active' if current_page?(home_stations_path) %>"><%= link_to  "Nearby Train and Bus Stops" , home_stations_path %></li>                     
+					 <li class="<%= 'active' if current_page?(home_stations_path) %>"><%= link_to  "Nearby Bus Stops" , home_stations_path %></li>                     
          </ul>
 
                     </div><!-- /.navbar-collapse -->
