--- a/app/views/home/stations.html.erb
+++ b/app/views/home/stations.html.erb
@@ -1,2 +1,20 @@
-<%= @geocoder %> <br/><br/><br/>
-<%= @response %>
+
+<!--<%= @data %>-->
+<div class="col-md-4">
+
+<div class="panel panel-default">
+	<h4>Names</h4>
+    <div class="panel-body">
+		<%= @name.join('<br />').html_safe %>
+	</div>
+</div>
+</div>
+<div class="col-md-8">
+	
+<div class="panel panel-default">
+	<h4>Location</h4>
+    <div class="panel-body">
+		<%= @location.join('<br />').html_safe %>
+	</div>
+</div>
+</div>
